@@ -1,6 +1,3 @@
-* TODO Figure out how to handle space above continuation lines
-I could simply avoid adding extra space in the svg for these cases.
-
 * TODO Shortdoc
 
 * TODO Handle large raise display properties
