@@ -1,8 +1,9 @@
 * NEXT
-- Hats are now rendered for characters not part of symbols.
+- Hats are now rendered for non-alphanumeric characters as well.
 - Added function ~hatty-locate-token-region~ for getting the region of
-  the token that the hat is placed over.
+  the token that a hat is placed over.
 - Added the rest of the hats available in cursorless.
+- Fix character height for characters on wrapped lines.
 
 * 0.3.0 [2024-09-25 Wed]
 - When loading hatty, it will now try to pick colors appropriate for
